# livewhisper-smart-transcripts

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  shutdown.sh  start.sh  test_ws.py
.beads/: beads.base.meta.json  beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched
app/: cli.py  database.py  main.py  transcriber.py
app/static/: index.html
