[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conduit-transcription"
version = "0.1.0"
description = "Podcast Transcription API and CLI - FastAPI web app and CLI interface"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Jay Miller", email = "kjaymiller@gmail.com" }]

dependencies = [
  "click>=8.0.0",
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "jinja2>=3.1.0",
  "python-multipart",
  "sqlmodel",
  "httpx",
  "psycopg2-binary",
  "valkey>=6.1.1",
  "websockets>=16.0",
  "mlx-whisper>=0.4.3",
  "pyannote-audio>=3.1.1",
  "torch",
  "torchaudio",
  "python-dotenv",
]

[project.scripts]
transcribe = "app.cli:cli"

[project.urls]
Homepage = "https://github.com/kjaymiller/conduit-transcripts"
Repository = "https://github.com/kjaymiller/conduit-transcripts"
Issues = "https://github.com/kjaymiller/conduit-transcripts/issues"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"


[tool.setuptools]
packages = ["app"]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2"]
